--- a/app/frontend/src/containers/Landing/Landing.css
+++ b/app/frontend/src/containers/Landing/Landing.css
@@ -1,27 +1,22 @@
-.Landing {
+.app_landing {
     height: 100vh;
+    background-color: var(--color-white);
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
-    background-color: var(--color-white);
 }
 
-.Landing-Nav {
-    width: 100%;
-}
-
-.Landing-Body {
+.app_landing-body {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 0 5rem 0;
 }
 
-.Landing-Body img {
+.app_landing-body img {
     width: 86vw;
+    align-self: center;
 }
