--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('./fonts/Montserrat-VariableFont_wght.ttf');
+}
+
+
+*::selection {
+  color: var(--color-white);
+  background: var(--color-brown);
+}
+
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
@@ -17,5 +28,5 @@ code {
 :root {
   --color-white: #EDE9E4;
   --color-brown: #563631;
-  --color-green: #97B788;
+  --color-green: #97b788;
 }
