--- a/app/frontend/src/index.css
+++ b/app/frontend/src/index.css
@@ -17,5 +17,6 @@ code {
 :root {
   --color-white: #EDE9E4;
   --color-brown: #563631;
-  --color-green: #97B788;
+  --color-green: rgba(152, 184, 137, 40%);
+  --color-green-button: #97B788;
 }
