--- a/app/frontend/src/containers/Pdf/Pdf.css
+++ b/app/frontend/src/containers/Pdf/Pdf.css
@@ -11,16 +11,24 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height:100%;
+    height: 100%;
+}
+
+.app_pdf-center input[type="file"] {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .app_pdf-button {
     background-color: var(--color-green-button);
     color: var(--color-white);
-    border: 0rem;
+    padding: 10px 20px;
+    cursor: pointer;
     font-weight: 500;
     font-size: 36px;
-    line-height: 59px;
-    cursor: pointer;
-    padding: 1rem;
+    line-height: 78px;
 }
