--- a/app/frontend/src/containers/Agricultor/Agricultor.css
+++ b/app/frontend/src/containers/Agricultor/Agricultor.css
@@ -91,14 +91,15 @@
     line-height: 59px;
 }
 
-.app_agricultor-prod a {
+.app_agricultor-prod {
     text-decoration: none;
     color: var(--color-brown);
     transition: 0.5s ease ;
+    cursor: pointer;
 }
 
-.app_agricultor-prod a:hover {
-    font-size: 40px;
+.app_agricultor-prod:hover {
+    text-decoration: underline;
 }
 
 
@@ -129,5 +130,87 @@
 
 .app_agricultor-adicionar {
     margin-bottom: 1rem;
+    cursor: pointer;
+}
+
+.app_agricultor-pop {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+}
+
+.app_agricultor-pop-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.app_agricultor-pop-title {
+    font-weight: 600;
+    font-size: 2.1rem;
+}
+
+.app_agricultor-pop-local {
+    font-weight: 600;
+    font-size: 2rem;
+}
+
+.app_agricultor-pop-email {
+    font-weight: 600;
+    font-size: 1.8rem;
+}
+
+.app_agricultor-pop-desc {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+.app_agricultor-pop-desc div {
+    font-size: 1.8rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.app_agricultor-pop-desc-header {
+    font-weight: 600;
+    font-size: 1.8rem;
+
+    color: var(--color-green);
+}
+
+.app_agricultor-pop-desc-footer {
+    width: 100%;
+    padding: 1rem 0 0 0;
+    font-weight: 600;
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.app_agricultor-pop-desc-footer-total {
+
+    font-weight: 600;
+    font-size: 1.8rem;
+
+    color: var(--color-green);
+}
+
+.app_agricultor-pop-desc-footer-buttons {
+    display: flex;
+    gap: 1rem;
+}
+
+.app_agricultor-pop-desc-footer-buttons button{
+    background-color: var(--color-green-button);
+    color: var(--color-white);
+    border: 0rem;
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 59px;
     cursor: pointer;
 }
