--- a/app/frontend/src/components/Pop/Pop.css
+++ b/app/frontend/src/components/Pop/Pop.css
@@ -1,105 +1,31 @@
-.popup_container {
+.popup {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.3);
-    z-index: 100;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.popup{
-    position: fixed;
-    background: #D9D9D9;
-    border-radius: 21px;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    width: 60%;
-    max-width: 800px;
-    min-width: 310px;
-    height: auto;
-    z-index: 100;
-    display: flex;
-    
-    flex-direction: column;
-
-    align-items: flex-start;
-    opacity: 0;
-    animation-name: fade-in;
-    animation-duration: .7s;
-    animation-fill-mode: forwards;
+.popup-inner {
+    text-align: center;
+    position: relative;
+    padding: 35px;
+    width: 100%;
+    max-width: 600px;
+    background-color: var(--color-white);
+    border-radius: 12px;
 }
 
-@keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-
-.popup_items {
-    padding: 1rem 2rem;
-    margin-top: -4rem;
-}
-
-.popup_items h1 {
-    font-family: 'Sinkin Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 22px;
-      
-}
-
-.popup_items h2 {
-    
-    font-family: 'Sinkin Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 22px;
-          
-    
-}
-
-
-
-.popup_items p {
-    font-family: 'Roboto Mono', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 17px;
-    color: #222222;
-
-    
-
-}
-
-.popup_info {
-    padding-top: 0.5rem;
-    white-space: pre-wrap;
-}
-
-.popup_info img {
-    width: 10rem;
-}
-
-.description {
-    padding-top: 2rem;
-}
-
-
-.blue {
-    color: #69529D;
-}
-
-.green {
-    color: #9BBE64;
+.popup-inner .close-btn {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    background-color: var(--color-brown);
+    border: 0px solid var(--color-brown);
+    color: white;
+    cursor: pointer;
 }
