--- a/app/frontend/src/components/Navbar/Navbar.css
+++ b/app/frontend/src/components/Navbar/Navbar.css
@@ -30,3 +30,86 @@
     padding: 0.5rem 1rem;
     transition: all 0.3s ease-in-out;
 }
+
+.navbar-pop {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar-container-form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 0 0;
+}
+
+.navbar-container-form form {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.navbar-container-form label {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #FFFFFF;
+    align-self: center;
+}
+
+.navbar-container-form input {
+    width: 20rem;
+    height: 2rem;
+    border: 0.2rem solid var(--color-white);
+    margin: 0.5rem 0rem;
+    box-sizing: border-box;
+    padding: 0 0.5rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #563631;
+    background-color: var(--color-white);
+}
+
+.navbar-email {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    width: 90%;
+}
+
+.navbar-password {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    width: 90%;
+}
+
+.navbar-container-submit {
+    width: 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+}
+
+.navbar-container-form button {
+    width: 100%;
+    height: 3rem;
+    border: none;
+    margin: 0.5rem 0;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--color-white);
+    background-color: var(--color-brown);
+    cursor: pointer;
+    transition: 0.5s ease;
+    height: 2rem ;
+}
