--- a/app/frontend/src/containers/Pdf/Pdf.css
+++ b/app/frontend/src/containers/Pdf/Pdf.css
@@ -14,13 +14,11 @@
     height: 100%;
 }
 
-.app_pdf-center input[type="file"] {
+input[type="file"] {
     opacity: 0;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
 }
 
 .app_pdf-button {
@@ -31,4 +29,43 @@
     font-weight: 500;
     font-size: 36px;
     line-height: 78px;
+}
+
+.app_pdf-footer-wrapper {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.app_pdf-footer {
+    width: 100%;
+    height: 6rem;
+    background-color: var(--color-green);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.app_pdf-footer button {
+    background-color: var(--color-white);
+    color: var(--color-green-button);
+
+    border: none;
+    padding: 0 1rem;
+    
+    cursor: pointer;
+    
+    width: 10rem;
+    height: 3rem;
+
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 78px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
