--- a/app/frontend/src/containers/List/List.css
+++ b/app/frontend/src/containers/List/List.css
@@ -17,7 +17,11 @@
 }
 
 .app_list-margin {
-    margin-left: 5.5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .app_list-pad {
